# git_lab

./: Cargo.toml  README.md
src/: blob.rs  file_io.rs  main.rs  obj_arch  obj_type.rs  tree.rs
src/data/: data.rs  mod.rs
src/decode/: dezlib.rs  mod.rs
src/encode/: mod.rs  sha_1.rs  zlib.rs
src/testfile/: test
